# wiseword

./: README.md  package-lock.json  pyproject.toml  receiver_agent.py  sender_agent.py  uagents_test.py
backend/: app.py  requirements.txt
backend/agents/: ai_agent.py  news_agent.py  openai_ask.py  private_keys.json  webscraper_agent.py
moya/: README.md  index.html  tailwind.config.ts
moya/src/: index.css
moya/src/components/: ContentConverter.tsx  InputSection.tsx  OutputSection.tsx
moya/src/pages/: Index.tsx
